# cpp-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/adder/: adder.cpp  adder.h
test/: test.cpp
tests/: CMakeLists.txt  test.cpp
tests/adder/: adder.cpp
